<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <string name="sign_up_mail_text">Sign up with mail</string>

    <!--sign up -->
    <string name="sign_up_button">Sign Up</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="userName">Name</string>
    <string name="home">Home</string>
    <string name="photo">Photo</string>
    <string name="profile">Profile</string>
    <string name="likeCount">%1d Likes</string>
    <string name="addImage">Add Image</string>
    <string name="logout">Logout</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePhoto">Change Photo</string>
    <string name="privateInformastion">Private Informastion</string>
    <string name="bio">Bio</string>
</resources>
