<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:padding="32dp">


    <ImageView android:layout_width="0dp"

               android:src="@drawable/instagram_logo"
               android:layout_height="58dp" android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp" android:id="@+id/imageView"
               android:layout_marginBottom="42dp" app:layout_constraintBottom_toTopOf="@+id/layout_email"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field_hint"
            app:boxStrokeColor="@color/colorPrimaryDark"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="250"
                android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content"
            android:hint="@string/password_field_hint"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/bt_login"
            android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:layout_marginTop="10dp"
                android:maxLength="50"
                android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login_button_text"

            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

    <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    <TextView
            android:text="OR"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
            app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toEndOf="@+id/divider4"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"

            android:background="@color/grey_light"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.3"
            android:layout_marginEnd="3dp"/>
    <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/grey_light"

            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintVertical_bias="0.3"
            android:layout_marginStart="3dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"/>
    <TextView
            android:text="@string/sign_up_mail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.25" android:textSize="20sp"
            android:textColor="@color/blue" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>